Add separate deployment GitHub action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,5 @@
-name: CI
+name: Unit Test
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -12,13 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Prepare
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: 'adopt'
-
-      - name: Unit Test
+      - name: Build
         run: gradle build
-
