--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: akhileshns/heroku-deploy@v3.12.12
+      - name: Deploy
+        uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          email: "jamesmmbrown@gmail.com"
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "chores-shellac"
-          heroku_email: "jamesmmbrown@gmail.com"
-          usedocker: true
-          justlogin: true
+          dockerfile_directory: ./
