--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Docker Build
-        run: docker login --username=megadream --password=$HEROKU_API_KEY --password-stdin registry.heroku.com
+        run: docker login --username=_ --password=cdc21d38-df69-4376-ac20-9b8b448fa2fe registry.heroku.com
       - name: Publish
         run: |
           heroku container:push web -a $APP_NAME
