Set Java language version

--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,9 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
